2014-06-11	SilverNexus
	* lib/checkarch.pl: Rename old checkarch script, since it isn't
	part of the build process and isn't dynamically generated, either.
	* lib/Makefile.am: Remove checkarch script from makefile, since
	no references are made to it.

2014-05-27	SilverNexus
	* lib/formulae: Added smithery formulas to smelt ores into bars.

2014-05-27	SilverNexus
	* common/object.c: Fix inventory weight calculation bug from merging objects.

2014-05-20	SilverNexus
	* debian/cross-edit.files,
	* debian/control,
	* debian/rules: Retire crossedit construction from debian files.

2014-05-19	SilverNexus
	* utils/add_throw: Retire add_throw script, skills have been
	  with the newer system for a while now. I think it may have
	  been in excess of fifteen years.

2014-05-19	SilverNexus
	* socket/loop.c,
	* socket/request.c,
	* include/sockproto.h: Retire support for mapredraw command.
	  It hasn't been used since 1.10.0 client in 2007.
	  On the server side, its been an empty function since 2005.

2014-05-17	Andreas Kirschbaum

	* For all files being written: add error checks and retain the
	previous file contents if a write error occurs.

2014-05-15	SilverNexus
	* server/c_misc.c: Don't allow account-bound characters to change
	  character password. It did not affect the account password, anyway.

2014-05-13	SilverNexus
	* server/c_misc.c: Fix in-game version command. Previous behavior
	  displayed "Crossfire FULL_VERSION".

2014-05-10	Kevin Zheng
	* socket/loop.c: Implement 'heartbeat' to check client connection.

2014-04-19	Kevin Zheng
	* server/server.c: Improve server shutdown command.

2014-04-18	Kevin Zheng
	* utils/crossloop.in: Add crash notification to crossloop.

2014-04-17	Kevin Zheng
	* server/init.c: Remove outdated "-o" flag.

2014-04-12	Kevin Zheng
	* utils/cfmeta-rrd: Retire since it no longer works with new metaserver.
	* utils/checkInternalPrototype.sh: Retire in favor of compiler flags.
	* utils/crossfire-loop.c: Retire in favor of shell script.